15Feb99========================================================================
1. Added msg forwarding code which uses $main::root/msg/forward.pl.
14Feb99========================================================================
1. Changed A & K in WWV to be the other way around (I am told by G3IOR that
this will mean that we won't have pole to pole aurora nor all the power lines
overloading everywhere as well as a result of having values of K > 10).
2. allow the '~' character in message bodies.
3. Moved $main::data/badmsg.pl to $main::root/msg/badmsg.pl.
11Feb99========================================================================
1. Fixed a problem with isolated nodes' configurations being sent on sending 
local configs to new connections.
08Feb99========================================================================
1. added a $SIG{ALRM} in the client to actually catch the alarm when it goes 
off which means that the netrom/ax25 call programs terminate properly (and not
loop as fast as their little legs can paddle, soaking up CPU time).
2. Implemented read receipts as an especial request from G4PDQ.
3. Fiddled with DXUser a bit to see whether I can stop it core dumping on new
users in PC16s on his machine.
4. Added E4 (Palestine) to Prefix data.
30Jan99========================================================================
1. Some of the dates we get can cause crashes, tried to make it more robust (oh
and Y2K compliant)
2. PC16 seem to come in with missing callsigns from somewhere
3. added $main::data/baddx.pl which prevents callsigns that are in the list being
a) forwarded b) stored and c) (except for the originator, if local) being
displayed locally.
4. added $main::data/badmsg.pl which deletes any messages whose TO address is
in this list (this is largely for european sensibilities). 
18Jan99========================================================================
1. added present(),presentish() and disconnect() to DXCron so that you can see 